--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,35 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    // needed for Next.js imports
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "lib": [
+      "ES2020",
+      "DOM"
+    ],
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noErrorTruncation": true,
+    // needed to import Contentlayer package version
+    "resolveJsonModule": true,
+    "target": "ES2020",
+    "plugins": [
+      {
+        "transform": "@effect-ts/tracing-plugin"
+      }
+    ],
     "allowSyntheticDefaultImports": true,
     "module": "ES2020",
     "rootDir": "./src",
     "outDir": "./dist",
-    "tsBuildInfoFile": "./dist/.tsbuildinfo.json"
   },
-  "include": ["./src"],
-  "references": [{ "path": "../@contentlayer/utils" }, { "path": "../@contentlayer/core" }]
+  "include": [
+    "./src"
+  ],
 }
